<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SubActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="56dp">


        <TextView
            android:id="@+id/TextViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextName"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextViewShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextShortDescription"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/shortdescription"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextViewLongDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextLongDescription"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/longdescription"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextViewGoodnessValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/TextViewDefaultGoodnessValue"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/goodnessvalue"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:layout_toLeftOf="@+id/TextViewName"
            android:layout_alignParentRight="true"
            android:inputType="text"/>

        <EditText
            android:id="@+id/EditTextShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:layout_toLeftOf="@+id/TextViewShortDescription"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/EditTextName"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/EditTextLongDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:layout_toLeftOf="@+id/TextViewLongDescription"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/EditTextShortDescription"
            android:inputType="textMultiLine"/>

        <TextView
            android:id="@+id/TextViewDefaultGoodnessValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/text_top_bottom_padding"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_toLeftOf="@+id/TextViewGoodnessValue"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/EditTextLongDescription"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_goodness_value"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tile_height"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/save"
                android:drawableTop="@drawable/ic_done_black_24dp"
                android:textSize="14sp"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:drawableTop="@drawable/ic_close_black_24dp"
                android:layout_weight="0.5"/>
        </LinearLayout>


    </RelativeLayout>


</FrameLayout>