<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.EditOrDelete">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="56dp">


        <TextView
            android:id="@+id/TextViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextName"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextViewShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextShortDescription"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/shortdescription"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextViewLongDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextLongDescription"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/longdescription"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextViewGoodnessValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditTextGoodnessValue"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/goodnessvalue"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:layout_toLeftOf="@+id/TextViewName"
            android:layout_alignParentRight="true"
            android:inputType="text"/>

        <EditText
            android:id="@+id/EditTextShortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:layout_toLeftOf="@+id/TextViewShortDescription"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/EditTextName"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/EditTextLongDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:layout_toLeftOf="@+id/TextViewLongDescription"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/EditTextShortDescription"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/EditTextGoodnessValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:layout_toLeftOf="@+id/TextViewGoodnessValue"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/EditTextLongDescription"
            android:inputType="text"/>


        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/delete"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/edit"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>