<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".activity.ItemDisplay">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginTop="56dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/NameView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name" />

            <TextView
                android:id="@+id/TextItemName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:ems="12"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ShortDescriptionView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_below="@id/NameView">

            <TextView
                android:id="@+id/TextViewShortDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/shortdescription" />

            <TextView
                android:id="@+id/TextItemShortDescription"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/shortdescription"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LongDescriptionView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_below="@id/ShortDescriptionView">
            
            <TextView
                android:id="@+id/TextViewLongDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/longdescription" />

            <TextView
                android:id="@+id/TextItemLongDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/longdescription"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/GoodnessValueView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_below="@id/LongDescriptionView">

            <TextView
                android:id="@+id/TextViewGoodnessValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/goodnessvalue" />

            <TextView
                android:id="@+id/TextItemGoodnessValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:ems="12"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/goodnessvalue"/>
        </LinearLayout>


        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"/>


    </RelativeLayout>

</RelativeLayout>